Moved json data to script, added functions to loop through questions.

--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@
         <a href="./scores.html" id="hslink">See High Scores</a>
     </div>
 </body>
-<script type="module" src="./assets/script/quiz-questions.json"></script>
+<!-- <script type="module" src="https://github.com/ChadBowler/quiz/blob/main/assets/script/quiz-questions.json"></script> -->
 </html>
