--- a/quiz.html
+++ b/quiz.html
@@ -8,13 +8,29 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sigmar&family=Vina+Sans&display=swap" rel="stylesheet">
+    <script src="./assets/script/script.js"></script>
     <title>Coding Quiz - Quiz</title>
 </head>
 <body>
     
-    <div class="quizcontainer">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</div>
+    <div class="quizcontainer" id="quizcontainer">
+        <h1 id="readyheader">Are you ready?</h1>
+        <input type="button" class="button" id="quizbutton" value="Click to Start" onclick="startGame()">
+        <div id="number"></div>
+        <div id="question"></div>
+        <div class="answerscontainer">
+            <input type="button" class="answerbutton" id="answerbutton1" value="A">
+            <div id="answer1"></div>
+            <input type="button" class="answerbutton" id="answerbutton2" value="B">
+            <div id="answer2"></div>
+            <input type="button" class="answerbutton" id="answerbutton3" value="C">
+            <div id="answer3"></div>
+            <input type="button" class="answerbutton" id="answerbutton4" value="D">
+            <div id="answer4"></div>
+        </div>
+    </div>
 
 </body>
 <input type="button" class="button" id="homebutton" value="Go Home" onclick="window.location='./index.html'">
-<script type="module" src="./assets/script/quiz-questions.json"></script>
+<!-- <script type="module" src="https://github.com/ChadBowler/quiz/blob/main/assets/script/quiz-questions.json"></script> -->
 </html>
