--- a/scores.html
+++ b/scores.html
@@ -34,5 +34,5 @@
     
 </body>
 <input type="button" class="button" id="homebutton" value="Go Home" onclick="window.location='./index.html'">
-<script type="module" src="./assets/script/quiz-questions.json"></script>
+<!-- <script type="module" src="https://github.com/ChadBowler/quiz/blob/main/assets/script/quiz-questions.json"></script> -->
 </html>
