--- a/quiz.html
+++ b/quiz.html
@@ -18,7 +18,7 @@
         <input type="button" class="button" id="quizbutton" value="Click to Start" onclick="startGame()">
         <div id="number"></div>
         <div id="question"></div>
-        <div class="answerscontainer">
+        <div class="answerscontainer" id="answerscontainer">
             <input type="button" class="answerbutton" id="answerbutton1" value="A">
             <div id="answer1"></div>
             <input type="button" class="answerbutton" id="answerbutton2" value="B">
@@ -27,6 +27,16 @@
             <div id="answer3"></div>
             <input type="button" class="answerbutton" id="answerbutton4" value="D">
             <div id="answer4"></div>
+        </div>
+        <div class="answerscontainer" id="submitinits">
+            <p id="highscoretext"></p>
+            <form action="" id="submitform">
+                <div>
+                    <label for="initials" id="label">Initials:</label>
+                    <input type="text" name="initials" maxlength="3" id="inits"><br>
+                </div>
+                <input type="submit" value="Submit" class="button">
+            </form>
         </div>
     </div>
 
