started processing initials submission

--- a/quiz.html
+++ b/quiz.html
@@ -30,12 +30,12 @@
         </div>
         <div class="answerscontainer" id="submitinits">
             <p id="highscoretext"></p>
-            <form action="" id="submitform">
+            <form action="./scores.html" id="submitform">
                 <div>
                     <label for="initials" id="label">Initials:</label>
                     <input type="text" name="initials" maxlength="3" id="inits"><br>
                 </div>
-                <input type="submit" value="Submit" class="button">
+                <input type="submit" value="Submit" class="button" onclick="processForm()">
             </form>
         </div>
     </div>
