added functionality for getting score and initials stored in array

--- a/quiz.html
+++ b/quiz.html
@@ -30,13 +30,16 @@
         </div>
         <div class="answerscontainer" id="submitinits">
             <p id="highscoretext"></p>
-            <form action="./scores.html" id="submitform">
+            <form id="submitform">
                 <div>
                     <label for="initials" id="label">Initials:</label>
                     <input type="text" name="initials" maxlength="3" id="inits"><br>
                 </div>
-                <input type="submit" value="Submit" class="button" onclick="processForm()">
+                <input type="reset" value="Submit" class="button" onclick="processForm()">
             </form>
+        </div>
+        <div class="scorecontainer" id="scorecontainer">
+            
         </div>
     </div>
 
