cleaned up code with for loops, added TODO comments for finishing touches

--- a/quiz.html
+++ b/quiz.html
@@ -19,13 +19,13 @@
         <div id="number"></div>
         <div id="question"></div>
         <div class="answerscontainer" id="answerscontainer">
-            <input type="button" class="answerbutton" id="answerbutton1" value="A">
+            <input type="button" class="answerbutton" id="answerbutton1" data-answer="1" value="A">
             <div id="answer1"></div>
-            <input type="button" class="answerbutton" id="answerbutton2" value="B">
+            <input type="button" class="answerbutton" id="answerbutton2" data-answer="2" value="B">
             <div id="answer2"></div>
-            <input type="button" class="answerbutton" id="answerbutton3" value="C">
+            <input type="button" class="answerbutton" id="answerbutton3" data-answer="3" value="C">
             <div id="answer3"></div>
-            <input type="button" class="answerbutton" id="answerbutton4" value="D">
+            <input type="button" class="answerbutton" id="answerbutton4" data-answer="4" value="D">
             <div id="answer4"></div>
         </div>
         <div class="answerscontainer" id="submitinits">
