Added local storage to save and retrieve high scores

--- a/scores.html
+++ b/scores.html
@@ -18,7 +18,7 @@
     
     <div class="container" id="bigcontainer">
         <!-- <button class="button" id="hsbutton" onclick="processForm()">Where are the High Scores?</button> -->
-        <div class="scorecontainer" id="scorecontainer">
+        <div class="scorecontainer" id="highscorecontainer">
             
         </div>
     </div>
